# rust_dojo

./: README.md
add_one_row_to_tree_623/: Cargo.toml
adjacent_repeated_words/: Cargo.toml
all_paths_from_source_to_target/: Cargo.toml
aoc_2025/day_4/: Cargo.toml
aoc_2025/day_4/src/: main.rs  solution.rs
aoc_2025/day_8/: Cargo.toml
aoc_2025/day_8/benches/: benchmarks.rs
aoc_2025/day_8/src/: error.rs  lib.rs  main.rs  solution.rs  uf.rs
appartement_blocks_optimisation/: Cargo.toml
arithmetic_subarrays/: Cargo.toml
as_far_from_land_as_possible/: Cargo.toml
assign_places_for_users/: Cargo.toml
assign_places_for_users/src/: lib.rs
bag_of_tokens_948/: Cargo.toml
best_sightseeing_pair_1014/: Cargo.toml
best_team_with_no_conflicts/: Cargo.toml
best_travel/: Cargo.toml
binary_subarrays_with_sum_930/: Cargo.toml
binary_tree_from_inorder_and_postorder_traversal/: Cargo.toml
binary_tree_preorder_traversal/: Cargo.toml
bit_manipulation_example/: Cargo.toml
bit_manipulation_training/: Cargo.toml
braking_well/: Cargo.toml
bus-routes/: Cargo.toml
buying_a_car/: Cargo.toml
cheapest_flights_within_k_stops/: Cargo.toml
circular_sentence_2490/: Cargo.toml
closing_paranthesis/: Cargo.toml
combination_sum_ii_40/: Cargo.toml
contiguous_array_525/: Cargo.toml
count-nice-pairs-in-an-array/: Cargo.toml
count_complete_tree_nodes/: Cargo.toml
count_number_of_pairs_with_diff_k/: Cargo.toml
count_prefix_and_suffix_pairs_i_3042/: Cargo.toml
count_sub_islands_1905/: Cargo.toml
count_subarrays_where_max_elem_appears_at_least_k_times_2962/: Cargo.toml
count_the_number_of_fair_pairs_2563/: Cargo.toml
count_triplets_that_can_form_two_arrays_of_equal_xor_1442/: Cargo.toml
count_unguarded_cells_in_the_grid_2257/: Cargo.toml
count_unreacheable_pairs_of_nodes_in_an_undirected_graph/: Cargo.toml
count_vowel_strings_in_ranges_2559/: Cargo.toml
count_ways_to_build_good_strings_2466/: Cargo.toml
decode_the_morse_code/: Cargo.toml
defuse_the_bomb_1652/: Cargo.toml
delete_characters_to_make_fancy_string_1957/: Cargo.toml
detect_capital_letters/: Cargo.toml
diagonal_traverse_ii/: Cargo.toml
diameter_of_binary_tree/: Cargo.toml
divide_array_into_equal_parts/: Cargo.toml
divide_players_into_teams_of_equal_skill_2491/: Cargo.toml
dp/: README.md
easy_bulk_problems/: Cargo.toml
evaluate_reverse_polish_notation/: Cargo.toml
even_odd_tree/: Cargo.toml
extra_characters_in_a_string_2707/: Cargo.toml
(+752 files in other folders)
