[package]
edition = "2021"
name = "assign_places_for_users"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.64"

[dev-dependencies]
vector_assertions = "0.1.0"
