[package]
name = "day_4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug=true

[build]
rustflags = ["-C", "target-cpu=native", "-C", "force-frame-pointers=yes"]

[dependencies]
derive_more = { version = "1.0.0", features = ["from"] }
rustc-hash = "2.1.1"
