[package]
name = "day_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
derive_more = { version = "2.1.0", features = ["from"] }
itertools = "0.14.0"
ordered-float = "5.1.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks" # This name corresponds to the file in the benches/ directory
harness = false          # Required to use criterion
